Fixed misalignment of title and page content

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1216,7 +1216,6 @@ a.bg-danger:hover {
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #eee;
 }
 ul,
 ol {
